--- a/select/3. 아픈 동물 찾기.md
+++ b/select/3. 아픈 동물 찾기.md
@@ -3,12 +3,13 @@
 
 | `NAME` | `TYPE` | `NULLABLE` |
 | --- | --- | --- |
-| `ANIMAL_ID` | VARCHAR(N) | FALSE |
+| ANIMAL_ID | VARCHAR(N) | FALSE |
 | ANIMAL_TYPE | VARCHAR(N) | FALSE |
 | DATETIME | DATETIME | FALSE |
 | INTAKE_CONDITION | VARCHAR(N) | FALSE |
 | NAME | VARCHAR(N) | TRUE |
 | SEX_UPON_INTAKE | VARCHAR(N) | FALSE |
+
 동물 보호소에 들어온 동물 중 아픈 동물1의 아이디와 이름을 조회하는 SQL 문을 작성해주세요. 이때 결과는 아이디 순으로 조회해주세요.
 
 ### 예시
